--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,17 @@
             ],
             "scripts": []
           }
+        },
+        "e2e": {
+          "builder": "playwright-ng-schematics:playwright",
+          "options": {
+            "devServerTarget": "estructuraProyecto:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "estructuraProyecto:serve:production"
+            }
+          }
         }
       }
     }
